--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
             dockerfile: Dockerfile
         restart: always
         volumes:
-            - ./frontend:/home/node
+            - ./frontend:/app
+            - /app/node_modules
         environment:
             HOST: '0.0.0.0'
         ports:
