--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,11 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+
+APP_URL=http://maenard.local:8000
+FRONTEND_URL=http://maenard.local:3000
+SESSION_DOMAIN=maenard.local
+SANCTUM_STATEFUL_DOMAINS=maenard.local:3000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
