--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@vueuse/core": "^11.1.0",
     "axios": "^1.2.1",
     "dotenv": "^16.4.5",
     "pinia": "^2.0.11",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12",
