--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "pinia": "^2.0.11",
     "pinia-plugin-persistedstate": "^4.1.2",
     "quasar": "^2.16.0",
-    "vue": "^3.4.18",
+    "vue": "^3.5.12",
+    "vue-advanced-cropper": "^2.8.9",
     "vue-router": "^4.0.12",
     "vue3-apexcharts": "^1.6.0"
   },
